# Shaco-tauri

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: debug.yml  linux_support.yml  main.yml  pull.yml  release.yml
src/: App.vue  main.ts  updater.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BaseButton.vue  DownloadModal.vue  Dropdown.vue  FileFormatSelector.vue  Modal.vue  Navbar.vue  PathSelector.vue  ProgressBar.vue  SearchInput.vue  ShacoInput.vue
src/data/: languages.ts
src/views/: Assets.vue  Home.vue  Test.vue
src/views/languages/: flagLoader.ts  index.vue
src/views/languages/components/: CustomTitles.vue  DownloadModal.vue  ExportModal.vue  LanguageCard.vue  LanguagesList.vue  LoadedLanguagesList.vue  ToolbarActions.vue  TranslationEditor.vue
~/.tauri/: myapp.key  myapp.key.pub
